--- a/yaas.cat/www/index.html
+++ b/yaas.cat/www/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 <link rel="stylesheet" href="css/main.css">
+<script async defer data-domain="yaas.cat" src="https://plausible.io/js/plausible.js"></script>
 </head>
 <body>
 <div id="ytplayer"></div>
@@ -20,22 +21,16 @@
       height: '100%',
       width: '100%',
       videoId: 'jGUn-rOl_9s',
-      playerVars: { 'autoplay': 1, 'controls': 0, 'html5': 1 },
+      playerVars: { 'autoplay': 1,'mute': 1, 'controls': 1, 'html5': 1 },
     });
   }
 </script>
 <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-73426603-1', 'auto');
-  ga('send', 'pageview');
-
+    setTimeout(1000, () => {
+        document.getElementsByClassName("ytp-mute-button ytp-button").forEach((el) => {
+            el.click()
+        })
+    })
 </script>
-<!-- Avocet Secure Image Pixel - cat enthusiast - 579b5857b9c63dfc66af913f -->
-<img src="https://ads.avocet.io/s?add=579b5857b9c63dfc66af913f" />
-<!-- end -->
 </body>
 </html>
